# dbt_walkthrough

./: README.md  dbt_project.yml  profiles.yml  pyproject.toml
analyses/: count_rows_starting_from_timestamp.sql  using_macro_in_sql_query.sql  using_macro_limit_data_in_dev.sql  using_macro_third_in_sql_query.sql  using_macro_union_tables_by_prefix.sql
macros/: audit.sql
macros/audits/: audit.sql
macros/dummy/: clean_stale_models.sql  first.sql  grant_select_on_target.sql  second.sql  third.sql  union_tables_by_prefix.sql
macros/shared/: utils.sql
macros/udfs/: get_current_user_name.sql  get_last_timestamp.sql  is_numeric_type.sql
models/exposures/: analysis_taxi_fhv_hv_trip_details.yml  analysis_taxi_yellow_green_trip_details.yml  dashboard_taxi_yellow_green_performance.yml
models/marts/core/: _core__models.yml  dim_licenses.sql  dim_payment_types.sql  dim_rate_codes.sql  dim_trip_modes.sql  dim_trip_types.sql  dim_trip_zones.sql
models/marts/fhv_trips/: _fhv__models.yml  fct_fhv_trips.sql
models/marts/green_trips/: _green__models.yml  fct_green_trips.sql
models/marts/high_volume_trips/: _hv__models.yml  fct_hv_trips.sql
models/marts/yellow_trips/: _yellow__models.yml  fct_yellow_trips.sql
models/metrics/: metric_fhv_hv_trips.yml  metric_yellow_green_trips.yml
models/reports/fhv_hv_trips/: rpt_fhv_hv_trip_details.sql
models/reports/yellow_green_trips/: rpt_yellow_green_location_revenues.sql  (+2 more)
seeds/: _seeds_models.yml  stg_seed__trip_modes.csv
snapshots/: licenses_snapshot.sql
tests/generic/: test_is_zero_amount.sql
(+26 files in other folders)
