[tool.poetry]
name = "dbt-walkthrough"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dbt-core = "^1.7.4"
dbt-databricks = "^1.7.3"
dbt-metricflow = {extras = ["databricks"], version = "^0.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
